--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <iframe src="https://tally.so/embed/w2jQKP?alignLeft=1&hideTitle=1" loading="lazy"></iframe>
 
   <h2>Контакты</h2>
-  <p>E-mail: <a href="mailto:biostat@ncph.kz">biostat@ncph.kz</a><br>
+  <p>E-mail: <a href="mailto:ncph_science@mail.ru">ncph_science@mail.ru</a><br>
      Telegram-бот: <a href="https://t.me/ncph_biostat_bot" target="_blank">@ncph_biostat_bot</a></p>
 
   <div class="footer">© 2025 РГП на ПХВ «Национальный центр общественного здравоохранения» МЗ РК</div>
