--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Искусство биостатистики — 2025</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script async src="https://tally.so/widgets/embed.js"></script>
   <style>
     body{font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;margin:0;padding:2rem;color:#333;background:#fafafa}
     h1,h2{color:#0b5aa0}
@@ -30,7 +31,13 @@
 
   <h2>Регистрация слушателей</h2>
   <p>Заполните форму и загрузите 4 документа (PDF/JPG, до 5 МБ каждый):</p>
-  <!-- Tally-форма -->
+  <button
+  data-tally-open="Np5rLj"
+  data-tally-width="600"
+  data-tally-emoji-text="📄"
+  data-tally
+    -emoji-animation="bounce"
+style="background:#0b5aa0;color:#fff;border:none;padding:12px 24px;border-radius:6px;font-size:18px;cursor:pointer;"
   <iframe src="https://tally.so/embed/w2jQKP?alignLeft=1&hideTitle=1" loading="lazy"></iframe>
 
   <h2>Контакты</h2>
