--- a/index.html
+++ b/index.html
@@ -4,16 +4,23 @@
   <meta charset="utf-8">
   <title>Искусство биостатистики — 2025</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Онлайн-курс повышения квалификации по биостатистике. 120 ак.ч.">
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>📊</text></svg>">
   <script async src="https://tally.so/widgets/embed.js"></script>
   <style>
-    body{font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;margin:0;padding:2rem;color:#333;background:#fafafa}
+    body{font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;margin:0;padding:2rem;color:#333;background:#fafafa;line-height:1.55}
     h1,h2{color:#0b5aa0}
     details{margin:1rem 0}
-    iframe{border:1px solid #ddd;border-radius:6px;width:100%;height:700px}
+    summary{cursor:pointer}
+    .btn{display:inline-block;background:#0b5aa0;color:#fff;border:none;padding:14px 28px;border-radius:6px;font-size:18px;cursor:pointer;transition:background .25s}
+    .btn:hover{background:#094d8c}
     .footer{margin-top:3rem;font-size:.8rem;color:#777}
+    a{color:#0b5aa0;text-decoration:none}
+    a:hover{text-decoration:underline}
   </style>
 </head>
 <body>
+
   <h1>Курс «Искусство биостатистики: анализ, интерпретация, публикация»</h1>
   <p><strong>17 – 29 ноября 2025 г.</strong> · 120 ак. ч. · онлайн (Zoom)</p>
 
@@ -27,23 +34,57 @@
       <li>1.4. Введение в R / RStudio</li>
     </ul>
   </details>
-  <!-- Добавьте остальные модули аналогично -->
+
+  <details>
+    <summary>Модуль 2. Основы статистического вывода (30 ч)</summary>
+    <ul>
+      <li>2.1. Вероятность и статистические распределения</li>
+      <li>2.2. Проверка гипотез (p-value, ДИ)</li>
+      <li>2.3. Методы сравнения групп</li>
+      <li>2.4. Расчёт размера выборки</li>
+    </ul>
+  </details>
+
+  <details>
+    <summary>Модуль 3. Анализ взаимосвязей (32 ч)</summary>
+    <ul>
+      <li>3.1. Корреляционный анализ</li>
+      <li>3.2. Линейная регрессия</li>
+      <li>3.3. Логистическая регрессия</li>
+      <li>3.4. OR vs RR</li>
+    </ul>
+  </details>
+
+  <details>
+    <summary>Модуль 4. Продвинутые методы (28 ч)</summary>
+    <ul>
+      <li>4.1. Кривые Каплана-Майера</li>
+      <li>4.2. Модель Кокса</li>
+      <li>4.3. Основы мета-анализа</li>
+    </ul>
+  </details>
 
   <h2>Регистрация слушателей</h2>
   <p>Заполните форму и загрузите 4 документа (PDF/JPG, до 5 МБ каждый):</p>
+
   <button
-  data-tally-open="Np5rLj"
-  data-tally-width="600"
-  data-tally-emoji-text="📄"
-  data-tally
-    -emoji-animation="bounce"
-style="background:#0b5aa0;color:#fff;border:none;padding:12px 24px;border-radius:6px;font-size:18px;cursor:pointer;"
-  <iframe src="https://tally.so/embed/w2jQKP?alignLeft=1&hideTitle=1" loading="lazy"></iframe>
+    data-tally-open="Np5rLj"
+    data-tally-width="600"
+    data-tally-emoji-text="📄"
+    data-tally-emoji-animation="bounce"
+    class="btn">
+    Подать заявку
+  </button>
 
   <h2>Контакты</h2>
-  <p>E-mail: <a href="mailto:ncph_science@mail.ru">ncph_science@mail.ru</a><br>
-     Telegram-бот: <a href="https://t.me/ncph_biostat_bot" target="_blank">@ncph_biostat_bot</a></p>
+  <p>
+    E-mail: <a href="mailto:ncph_science@mail.ru">ncph_science@mail.ru</a><br>
+    Telegram-бот: <a href="https://t.me/ncph_biostat_bot" target="_blank" rel="noopener">@ncph_biostat_bot</a>
+  </p>
 
-  <div class="footer">© 2025 РГП на ПХВ «Национальный центр общественного здравоохранения» МЗ РК</div>
+  <div class="footer">
+    © 2025 РГП на ПХВ «Национальный центр общественного здравоохранения» МЗ РК
+  </div>
+
 </body>
 </html>
