--- a/index.html
+++ b/index.html
@@ -7,84 +7,178 @@
   <meta name="description" content="Онлайн-курс повышения квалификации по биостатистике. 120 ак.ч.">
   <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>📊</text></svg>">
   <script async src="https://tally.so/widgets/embed.js"></script>
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+
   <style>
-    body{font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;margin:0;padding:2rem;color:#333;background:#fafafa;line-height:1.55}
-    h1,h2{color:#0b5aa0}
-    details{margin:1rem 0}
-    summary{cursor:pointer}
-    .btn{display:inline-block;background:#0b5aa0;color:#fff;border:none;padding:14px 28px;border-radius:6px;font-size:18px;cursor:pointer;transition:background .25s}
-    .btn:hover{background:#094d8c}
-    .footer{margin-top:3rem;font-size:.8rem;color:#777}
-    a{color:#0b5aa0;text-decoration:none}
+    :root{
+      --accent:#0b5aa0;
+      --accent-light:#4a8cd1;
+      --bg:#f8fafc;
+      --card:#ffffff;
+      --text:#1e293b;
+      --border:#e2e8f0;
+    }
+
+    *{box-sizing:border-box;margin:0;padding:0}
+    body{
+      font-family:'Inter',-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
+      color:var(--text);
+      line-height:1.6;
+      min-height:100vh;
+      background:var(--bg);
+      position:relative;
+      overflow-x:hidden;
+    }
+
+    /* Геометрический узор из слов */
+    .pattern{
+      position:absolute;
+      inset:0;
+      z-index:0;
+      opacity:.06;
+      font-weight:600;
+      font-size:clamp(1.2rem,2.5vw,2rem);
+      color:var(--accent);
+      user-select:none;
+      overflow:hidden;
+      display:grid;
+      grid-template-columns:repeat(auto-fill,minmax(200px,1fr));
+      gap:2rem 3rem;
+      padding:4rem;
+      align-content:center;
+      text-transform:uppercase;
+      letter-spacing:.1em;
+    }
+    .pattern span:nth-child(odd){color:var(--accent-light)}
+
+    /* Контент поверх узора */
+    .wrapper{
+      position:relative;
+      z-index:1;
+      max-width:900px;
+      margin:0 auto;
+      padding:3rem 2rem;
+    }
+
+    h1,h2{color:var(--accent);margin-bottom:.75em}
+    h1{font-size:clamp(1.8rem,4vw,2.5rem)}
+    h2{font-size:clamp(1.3rem,3vw,1.8rem)}
+
+    p{margin-bottom:1em}
+    a{color:var(--accent);text-decoration:none}
     a:hover{text-decoration:underline}
+
+    details{
+      background:var(--card);
+      border:1px solid var(--border);
+      border-radius:12px;
+      padding:1rem 1.5rem;
+      margin-bottom:1rem;
+      cursor:pointer;
+      transition:box-shadow .2s;
+    }
+    details:hover{box-shadow:0 8px 20px -10px rgba(11,90,160,.15)}
+    summary{font-weight:600;list-style:none;display:flex;align-items:center;justify-content:space-between}
+    summary::after{content:'▸';font-size:1.2rem;transition:transform .2s}
+    details[open] summary::after{transform:rotate(90deg)}
+    ul{margin-left:1.25em}
+
+    .btn{
+      display:inline-flex;
+      align-items:center;
+      gap:.5em;
+      background:var(--accent);
+      color:#fff;
+      border:none;
+      padding:14px 28px;
+      border-radius:8px;
+      font-size:1.1rem;
+      font-weight:600;
+      cursor:pointer;
+      transition:background .25s,transform .15s;
+    }
+    .btn:hover{background:var(--accent-light);transform:translateY(-2px)}
+    .footer{margin-top:4rem;font-size:.8rem;color:#64748b;text-align:center}
   </style>
 </head>
+
 <body>
-
-  <h1>Курс «Искусство биостатистики: анализ, интерпретация, публикация»</h1>
-  <p><strong>17 – 29 ноября 2025 г.</strong> · 120 ак. ч. · онлайн (Zoom)</p>
-
-  <h2>Программа</h2>
-  <details>
-    <summary>Модуль 1. Основы биостатистики и дизайн исследований (26 ч)</summary>
-    <ul>
-      <li>1.1. Введение в доказательную медицину. Типы данных</li>
-      <li>1.2. Описательная статистика и визуализация</li>
-      <li>1.3. Дизайн эпидемиологических исследований</li>
-      <li>1.4. Введение в R / RStudio</li>
-    </ul>
-  </details>
-
-  <details>
-    <summary>Модуль 2. Основы статистического вывода (30 ч)</summary>
-    <ul>
-      <li>2.1. Вероятность и статистические распределения</li>
-      <li>2.2. Проверка гипотез (p-value, ДИ)</li>
-      <li>2.3. Методы сравнения групп</li>
-      <li>2.4. Расчёт размера выборки</li>
-    </ul>
-  </details>
-
-  <details>
-    <summary>Модуль 3. Анализ взаимосвязей (32 ч)</summary>
-    <ul>
-      <li>3.1. Корреляционный анализ</li>
-      <li>3.2. Линейная регрессия</li>
-      <li>3.3. Логистическая регрессия</li>
-      <li>3.4. OR vs RR</li>
-    </ul>
-  </details>
-
-  <details>
-    <summary>Модуль 4. Продвинутые методы (28 ч)</summary>
-    <ul>
-      <li>4.1. Кривые Каплана-Майера</li>
-      <li>4.2. Модель Кокса</li>
-      <li>4.3. Основы мета-анализа</li>
-    </ul>
-  </details>
-
-  <h2>Регистрация слушателей</h2>
-  <p>Заполните форму и загрузите 4 документа (PDF/JPG, до 5 МБ каждый):</p>
-
-  <button
-    data-tally-open="Np5rLj"
-    data-tally-width="600"
-    data-tally-emoji-text="📄"
-    data-tally-emoji-animation="bounce"
-    class="btn">
-    Подать заявку
-  </button>
-
-  <h2>Контакты</h2>
-  <p>
-    E-mail: <a href="mailto:ncph_science@mail.ru">ncph_science@mail.ru</a><br>
-    Telegram-бот: <a href="https://t.me/ncph_biostat_bot" target="_blank" rel="noopener">@ncph_biostat_bot</a>
-  </p>
-
-  <div class="footer">
-    © 2025 РГП на ПХВ «Национальный центр общественного здравоохранения» МЗ РК
+  <!-- Геометрический узор из слов -->
+  <div class="pattern" aria-hidden="true">
+    <span>Data</span><span>Biostat</span><span>RCT</span><span>p-value</span>
+    <span>OR</span><span>HR</span><span>CI 95%</span><span>ANOVA</span>
+    <span>Survival</span><span>Kaplan-Meier</span><span>Cox</span><span>Meta</span>
+    <span>Regression</span><span>Logistic</span><span>Normal</span><span>Chi²</span>
+    <span>Sample Size</span><span>Evidence</span><span>RMST</span><span>Forest</span>
   </div>
 
+  <!-- Контент -->
+  <div class="wrapper">
+    <h1>Курс «Искусство биостатистики: анализ, интерпретация, публикация»</h1>
+    <p><strong>17 – 29 ноября 2025 г.</strong> · 120 ак. ч. · онлайн (Zoom)</p>
+
+    <h2>Программа</h2>
+    <details>
+      <summary>Модуль 1. Основы биостатистики и дизайн исследований (26 ч)</summary>
+      <ul>
+        <li>1.1. Введение в доказательную медицину. Типы данных</li>
+        <li>1.2. Описательная статистика и визуализация</li>
+        <li>1.3. Дизайн эпидемиологических исследований</li>
+        <li>1.4. Введение в R / RStudio</li>
+      </ul>
+    </details>
+
+    <details>
+      <summary>Модуль 2. Основы статистического вывода (30 ч)</summary>
+      <ul>
+        <li>2.1. Вероятность и статистические распределения</li>
+        <li>2.2. Проверка гипотез (p-value, ДИ)</li>
+        <li>2.3. Методы сравнения групп</li>
+        <li>2.4. Расчёт размера выборки</li>
+      </ul>
+    </details>
+
+    <details>
+      <summary>Модуль 3. Анализ взаимосвязей (32 ч)</summary>
+      <ul>
+        <li>3.1. Корреляционный анализ</li>
+        <li>3.2. Линейная регрессия</li>
+        <li>3.3. Логистическая регрессия</li>
+        <li>3.4. OR vs RR</li>
+      </ul>
+    </details>
+
+    <details>
+      <summary>Модуль 4. Продвинутые методы (28 ч)</summary>
+      <ul>
+        <li>4.1. Кривые Каплана-Майера</li>
+        <li>4.2. Модель Кокса</li>
+        <li>4.3. Основы мета-анализа</li>
+      </ul>
+    </details>
+
+    <h2>Регистрация слушателей</h2>
+    <p>Заполните форму и загрузите 4 документа (PDF/JPG, до 5 МБ каждый):</p>
+
+    <button data-tally-open="Np5rLj"
+            data-tally-width="600"
+            data-tally-emoji-text="📄"
+            data-tally-emoji-animation="bounce"
+            class="btn">
+      Подать заявку
+    </button>
+
+    <h2>Контакты</h2>
+    <p>
+      E-mail: <a href="mailto:ncph_science@mail.ru">ncph_science@mail.ru</a><br>
+      Telegram-бот: <a href="https://t.me/ncph_biostat_bot" target="_blank" rel="noopener">@ncph_biostat_bot</a>
+    </p>
+
+    <div class="footer">
+      © 2025 РГП на ПХВ «Национальный центр общественного здравоохранения» МЗ РК
+    </div>
+  </div>
 </body>
 </html>
