--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       --text:#e2e8f0;
       --border:#ffffff1a;
       --radius:14px;
-      --section-gap:5rem; /* ← интервал между секциями */
+      --section-gap:5rem;
     }
 
     *{box-sizing:border-box;margin:0;padding:0}
@@ -41,20 +41,9 @@
       position:fixed;inset:0;background:linear-gradient(135deg,rgba(15,23,42,.85) 0%, rgba(15,23,42,.65) 100%);z-index:-1;
     }
 
-    /* Счётчик дней до старта */
-    .countdown{
-      display:flex;gap:1rem;justify-content:center;margin:1.5rem 0 2.5rem;
-    }
-    .countdown div{
-      background:var(--card);backdrop-filter:blur(10px);border:1px solid var(--border);
-      border-radius:var(--radius);padding:.75rem 1.25rem;text-align:center;min-width:70px;
-    }
-    .countdown span:first-child{font-size:1.8rem;font-weight:700;color:var(--accent-light)}
-    .countdown span:last-child{font-size:.75rem;text-transform:uppercase;opacity:.8}
-
-    /* Живые цифры */
+    /* Живые цифры (без счётчика дней) */
     .stats{
-      display:flex;gap:2rem;justify-content:center;margin-bottom:3rem;flex-wrap:wrap;
+      display:flex;gap:2rem;justify-content:center;margin:2rem 0 3rem;flex-wrap:wrap;
     }
     .stats div{
       background:var(--card);backdrop-filter:blur(10px);border:1px solid var(--border);
@@ -109,7 +98,7 @@
     .footer{margin-top:4rem;font-size:.8rem;text-align:center;opacity:.6}
 
     @media(max-width:600px){
-      .countdown,.stats{gap:.75rem 1.5rem}
+      .stats{gap:.75rem 1.5rem}
       .stats div{padding:1rem}
     }
   </style>
@@ -125,9 +114,6 @@
     <h1>Искусство биостатистики: анализ, интерпретация, публикация</h1>
     <p><strong>17 – 29 ноября 2025</strong> · 120 ак.ч. · онлайн (Zoom)</p>
 
-    <!-- Счётчик дней до старта -->
-    <div class="countdown" id="countdown"></div>
-
     <!-- Живые цифры -->
     <div class="stats">
       <div><div class="num" data-target="420">0</div><div class="txt">часов видео</div></div>
@@ -140,4 +126,58 @@
       <h2>Программа курса</h2>
       <details>
         <summary>Модуль 1. Основы биостатистики и дизайн исследований (26 ч)</summary>
-        <ul><li>1.1. Введение в доказательную медицину. Типы данных</li><li>1.2. Описательная статистика и визуализация</li><li>
+        <ul><li>1.1. Введение в доказательную медицину. Типы данных</li><li>1.2. Описательная статистика и визуализация</li><li>1.3. Дизайн эпидемиологических исследований</li><li>1.4. Введение в R / RStudio</li></ul>
+      </details>
+      <details>
+        <summary>Модуль 2. Основы статистического вывода (30 ч)</summary>
+        <ul><li>2.1. Вероятность и статистические распределения</li><li>2.2. Проверка гипотез (p-value, ДИ)</li><li>2.3. Методы сравнения групп</li><li>2.4. Расчёт размера выборки</li></ul>
+      </details>
+      <details>
+        <summary>Модуль 3. Анализ взаимосвязей (32 ч)
+<ul><li><li><li><li>
+
+<details><summary>
+<ul><li><li><li>
+  <!-- Секция 2: Регистрация -->
+<section class="section">
+  <h2>Регистрация слушателей</h2>
+  <p>Заполните форму и загрузите 4 документа (PDF/JPG, до 5 МБ каждый):</p>
+  <button data-tally-open="Np5rLj" data-tally-width="600" data-tally-emoji-text="📄" data-tally-emoji-animation="bounce" class="btn">
+    <i class="fa-solid fa-paper-plane"></i> Подать заявку
+  </button>
+</section>
+
+<!-- Секция 3: Контакты -->
+<section class="section contacts">
+  <h2>Контакты</h2>
+  <p>
+    E-mail: <a href="mailto:ncph_science@mail.ru">ncph_science@mail.ru</a><br>
+    Telegram-бот: <a href="https://t.me/ncph_biostat_bot" target="_blank" rel="noopener">@ncph_biostat_bot</a>
+  </p>
+</section>
+
+<!-- Подвал -->
+<div class="footer">
+  © 2025 РГП на ПХВ «Национальный центр общественного здравоохранения» МЗ РК
+</div>
+  </div>
+  <!-- Анимация цифр -->
+  <script>
+    // Анимация чисел при скролле
+    const counters=document.querySelectorAll('.num');
+    const speed=200;
+    const countUp=target=>{
+      const update=()=>{
+        const current=+target.innerText;
+        const inc=target.dataset.target/speed;
+        if(current<target.dataset.target){target.innerText=Math.ceil(current+inc);setTimeout(update,15)}
+        else{target.innerText=target.dataset.target}
+      };update();
+    };
+    const observer=new IntersectionObserver(entries=>{
+      entries.forEach(en=>{if(en.isIntersecting){countUp(en.target);observer.unobserve(en.target)}});
+    },{threshold:.7});
+    counters.forEach(c=>observer.observe(c));
+  </script>
+</body>
+</html>
