--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
 <section class="section contacts">
   <h2>Контакты</h2>
   <p>
-    E-mail: <a href="mailto:ncph_science@mail.ru">ncph_science@mail.ru</a><br>
-    Telegram-бот: <a href="https://t.me/ncph_biostat_bot" target="_blank" rel="noopener">@ncph_biostat_bot</a>
+    E-mail: <a >ncph_science@mail.ru</a><br>
+    Куратор курса: <a >Хожамқұл Фариза +7 707 123 1523</a>
   </p>
 </section>
 
