--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
       <h2>Контакты</h2>
       <p>
         E-mail: <a href="mailto:ncph_science@mail.ru">ncph_science@mail.ru</a><br>
-        Telegram-бот: <a href="https://t.me/ncph_biostat_bot" target="_blank" rel="noopener">@ncph_biostat_bot</a>
+        Куратор курса: <a>Хожамқұл Фариза +7 707 123 1523</a>
       </p>
     </section>
 
