--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
       <h2>Контакты</h2>
       <p>
         E-mail: <a href="mailto:ncph_science@mail.ru">ncph_science@mail.ru</a><br>
-        Куратор курса: <a>Хожамқұл Фариза +7 707 123 1523</a>
+        Куратор курса: <a href=»tel:87071231523″>Хожамқұл Фариза +7 707 123 1523</a> 
       </p>
     </section>
 
