--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
       <h2>Контакты</h2>
       <p>
         E-mail: <a href="mailto:ncph_science@mail.ru">ncph_science@mail.ru</a><br>
-        Куратор курса: Хожамқұл Фариза<a href=»tel:87071231523″>+7 707 123 1523</a> 
+        Куратор курса: Хожамқұл Фариза<a href=»tel:+77071231523″>+7 707 123 1523</a> 
       </p>
     </section>
 
