--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     <!-- Секция 4: Регистрация -->
     <section class="section reg">
       <h2>Регистрация слушателей</h2>
-      <p>Заполните форму и загрузите 4 документа (PDF/JPG, до 5 МБ каждый):</p>
+      <p>Заполните форму для участия на курсе:</p>
       <button data-tally-open="Np5rLj" data-tally-width="600" data-tally-emoji-text="📄" data-tally-emoji-animation="bounce" class="btn">
         <i class="fa-solid fa-paper-plane"></i> Подать заявку
       </button>
