--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
     :root{
       --accent:#0b5aa0;
       --accent-light:#3b82f6;
-      --bg:#f5f7fa;
+      --bg:#f5f7fa;               /* ← светлый фон */
       --card:#ffffff;
       --text:#1e293b;
       --border:#e2e8f0;
       --radius:14px;
       --gap:5rem;
 
+      /* ЯВНЫЕ, но сдержанные цвета секций */
       --c-hero:#e0f2fe;
       --c-short:#fef3c7;
       --c-audience:#dcfce7;
@@ -50,12 +51,7 @@
     .stats .num{font-size:2.2rem;font-weight:700;color:var(--accent-light)}
     .stats .txt{font-size:.9rem;opacity:.85}
 
-    /* Заголовки — по центру */
-    h1,h2{
-      color:var(--accent-light);
-      margin-bottom:.5em;
-      text-align:center;
-    }
+    h1,h2{color:var(--accent-light);margin-bottom:.5em}
     h1{font-size:clamp(2rem,5vw,3rem);letter-spacing:-.02em}
     h2{font-size:clamp(1.4rem,3vw,2rem)}
 
@@ -82,4 +78,121 @@
     .btn:hover{transform:translateY(-3px);box-shadow:0 0 30px #f59e0b, 0 10px 25px -8px rgba(239,68,68,.7)}
     .btn i{font-size:1.4rem}
     @keyframes pulse{
-      0%{box-shadow:0 0 0 0 #f59e0b80}70%{box-shadow:0 0 0 12p
+      0%{box-shadow:0 0 0 0 #f59e0b80}70%{box-shadow:0 0 0 12px #f59e0b00}100%{box-shadow:0 0 0 0 #f59e0b00}
+    }
+
+    /* Цветные секции + центрирование текста в «Кратко» */
+    .section{margin:var(--gap) 0;padding:3rem 2rem;border-radius:var(--radius);background:var(--bg)}
+    .section>*{max-width:900px;margin-left:auto;margin-right:auto}
+    .center{text-align:center}
+    .hero{background:var(--c-hero)}.short{background:var(--c-short)}.audience{background:var(--c-audience)}.program{background:var(--c-program)}.reg{background:var(--c-reg)}.contacts{background:var(--c-contacts)}
+
+    /* Подвал */
+    .footer{margin-top:4rem;font-size:.8rem;text-align:center;opacity:.6}
+
+    @media(max-width:600px){.stats{gap:.75rem 1.5rem}.stats div{padding:1rem}}
+  </style>
+</head>
+
+<body>
+  <video class="video-bg" autoplay muted loop playsinline>
+    <source src="https://cdn.pixabay.com/vimeo/769374373/abstract-12285.mp4?width=1280&hash=8e6e3e5b5e5e5e5e5e5e5e5e5e5e5e5e5e5e5e" type="video/mp4">
+  </video>
+  <div class="overlay"></div>
+
+  <div class="wrapper">
+    <!-- Секция 0: Главный экран -->
+    <section class="section hero">
+      <h1>Искусство биостатистики: анализ, интерпретация, публикация</h1>
+      <p><strong>17 – 28 ноября 2025</strong> · 120 ак.ч. · онлайн (Zoom)</p>
+      <div class="stats">
+        <div><div class="num" data-target="10">0</div><div class="txt">живых занятий</div></div>
+        <div><div class="num" data-target="15">0</div><div class="txt">практических заданий</div></div>
+        <div><div class="num" data-target="100">0</div><div class="txt">% онлайн</div></div>
+      </div>
+    </section>
+
+    <!-- Секция 1: Кратко о курсе (завлекающая) -->
+    <section class="section short">
+      <h2>Кратко о курсе</h2>
+      <p>
+        За 2 недели вы пройдёте полный путь от «я боюсь p-value» до «я пишу статью по стандартам CONSORT и STROBE».
+        Работаем на реальных данных, пишем код в R, разбираем peer-review и учимся публиковаться в международных журналах.
+      </p>
+    </section>
+
+    <!-- Секция 2: Для кого курс -->
+    <section class="section audience">
+      <h2>Для кого курс</h2>
+      <ul>
+        <li>Аспиранты и магистранты медицинских / биологических специальностей</li>
+        <li>Молодые исследователи и научные сотрудники клиник</li>
+        <li>Врачи, провизоры, эпидемиологи, преподаватели ВУЗов</li>
+        <li>Все, кто хочет публиковаться в международных журналах и понимать biostatistics peer-review</li>
+      </ul>
+    </section>
+
+    <!-- Секция 3: Программа -->
+    <section class="section program">
+      <h2>Программа курса</h2>
+      <details>
+        <summary>Модуль 1. Основы биостатистики и дизайн исследований (26 ч)</summary>
+        <ul><li>1.1. Введение в доказательную медицину. Типы данных</li><li>1.2. Описательная статистика и визуализация</li><li>1.3. Дизайн эпидемиологических исследований</li><li>1.4. Введение в R / RStudio</li></ul>
+      </details>
+      <details>
+        <summary>Модуль 2. Основы статистического вывода (30 ч)</summary>
+        <ul><li>2.1. Вероятность и статистические распределения</li><li>2.2. Проверка гипотез (p-value, ДИ)</li><li>2.3. Методы сравнения групп</li><li>2.4. Расчёт размера выборки</li></ul>
+      </details>
+      <details>
+        <summary>Модуль 3. Анализ взаимосвязей (32 ч)</summary>
+        <ul><li>3.1. Корреляционный анализ</li><li>3.2. Линейная регрессия</li><li>3.3. Логистическая регрессия</li><li>3.4. OR vs RR</li></ul>
+      </details>
+      <details>
+        <summary>Модуль 4. Продвинутые методы (28 ч)</summary>
+        <ul><li>4.1. Кривые Каплана-Майера</li><li>4.2. Модель пропорциональных рисков Кокса</li><li>4.3. Основы мета-анализа</li></ul>
+      </details>
+    </section>
+
+    <!-- Секция 4: Регистрация -->
+    <section class="section reg">
+      <h2>Регистрация слушателей</h2>
+      <p>Заполните форму для участия на курсе:</p>
+      <button data-tally-open="Np5rLj" data-tally-width="600" data-tally-emoji-text="📄" data-tally-emoji-animation="bounce" class="btn">
+        <i class="fa-solid fa-paper-plane"></i> Подать заявку
+      </button>
+    </section>
+
+    <!-- Секция 5: Контакты -->
+    <section class="section contacts">
+      <h2>Контакты</h2>
+      <p>
+        E-mail: <a href="mailto:ncph_science@mail.ru">ncph_science@mail.ru</a><br>
+        Куратор курса: Хожамқұл Фариза<a href=»tel:+77071231523″>+7 707 123 1523</a> 
+      </p>
+    </section>
+
+    <!-- Подвал -->
+    <div class="footer">
+      © 2025 РГП на ПХВ «Национальный центр общественного здравоохранения» МЗ РК
+    </div>
+  </div>
+
+  <!-- Анимация цифр -->
+  <script>
+    const counters=document.querySelectorAll('.num');
+    const speed=200;
+    const countUp=target=>{
+      const update=()=>{
+        const current=+target.innerText;
+        const inc=target.dataset.target/speed;
+        if(current<target.dataset.target){target.innerText=Math.ceil(current+inc);setTimeout(update,15)}
+        else{target.innerText=target.dataset.target}
+      };update();
+    };
+    const observer=new IntersectionObserver(entries=>{
+      entries.forEach(en=>{if(en.isIntersecting){countUp(en.target);observer.unobserve(en.target)}});
+    },{threshold:.7});
+    counters.forEach(c=>observer.observe(c));
+  </script>
+</body>
+</html>
